--- a/Assets/Samples/ProBuilder/4.4.0/Editor Examples/Unity.ProBuilder.Examples.Editor.asmdef
+++ b/Assets/Samples/ProBuilder/4.4.0/Editor Examples/Unity.ProBuilder.Examples.Editor.asmdef
@@ -1,10 +1,10 @@
 {
     "name": "Unity.ProBuilder.Examples.Editor",
+    "rootNamespace": "",
     "references": [
         "Unity.ProBuilder.Editor",
         "Unity.ProBuilder"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -14,5 +14,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
