--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.polybrush": "1.0.2",
     "com.unity.postprocessing": "2.3.0",
     "com.unity.probuilder": "4.4.0",
+    "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "10.2.2",
     "com.unity.shadergraph": "10.2.2",
     "com.unity.terrain-tools": "3.0.2-preview.3",
